# pdfwatcher-friend

pdfwatcher/pdfwatcher/: HOWTOUSE.md  main.py  preferences.json  pyproject.toml  requirements.txt
pdfwatcher/pdfwatcher/src/detoplus/invoice_renamer/: __init__.py
pdfwatcher/pdfwatcher/src/detoplus/invoice_renamer/extraction/: __init__.py  common.py  constants.py  reader.py  specials.py
pdfwatcher/pdfwatcher/src/detoplus/invoice_renamer/identity/: __init__.py  mapping.py  repository.py
pdfwatcher/pdfwatcher/src/detoplus/invoice_renamer/naming/: __init__.py  assembler.py
pdfwatcher/pdfwatcher/src/detoplus/invoice_renamer/providers/: __init__.py  avu_netz.py  base.py  bielefelder.py  e_on.py  ena.py  ewz.py  geranetz.py  lichtblick.py  redinet.py  sachsennetze.py  ten.py  universal.py  wemag.py
pdfwatcher/pdfwatcher/src/detoplus/invoice_renamer/providers/sap/: __init__.py  _base.py  avacon.py  bayernwerk.py  e_dis.py  mitnetz.py
pdfwatcher/pdfwatcher/src/detoplus/invoice_renamer/ui/: __init__.py  app.py  i18n.py  theme.py
pdfwatcher/pdfwatcher/src/detoplus/invoice_renamer/watcher/: __init__.py  handler.py
pdfwatcher/pdfwatcher/tests/: conftest.py
pdfwatcher/pdfwatcher/tests/extraction/: test_common.py  test_specials.py
pdfwatcher/pdfwatcher/tests/identity/: test_mapping.py
pdfwatcher/pdfwatcher/tests/naming/: test_assembler.py
pdfwatcher/pdfwatcher/tests/providers/: test_avacon.py  test_ewz.py  test_lichtblick.py  test_mitnetz.py  test_ten.py  test_wemag.py
