[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detoplus-invoice-renamer"
version = "1.0.0"
description = "Auto-rename energy billing PDFs for DETOPlus solar parks"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.24.0",
    "Pillow>=10.4.0",
    "watchdog>=5.0.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
